<resources>
    <string name="app_name">Food Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_world_of_cooking">Welcome to the world of cooking</string>
    <string name="desc_start">With our application “Cooking with pleasure” you can easily and quickly find the perfect recipe for your culinary masterpiece.</string>
    <string name="get_started">Get Started</string>
    <string name="test">test</string>
    <string name="easy">Easy</string>
    <string name="featured_recipe">Featured Recipe</string>
    <string name="home">Home</string>
    <string name="see_all">See All</string>
    <string name="read">read</string>
    <string name="search_dishes">Search Dishes</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="ingredients">Ingredients</string>
    <string name="video_recipe">Video Recipe</string>
    <string name="steps">Steps</string>
    <string name="failed">Failed to open link</string>
    <string name="breakfast">Breakfast</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="smoothies">Smoothies</string>
    <string name="title1_1">Vegetable Omelette</string>
    <string name="title1_2">Granola with Yogurt</string>
    <string name="title1_3">Avocado Toast</string>
    <string name="title1_4">Berry Smoothie</string>
    <string name="title1_5">Oatmeal Porridge</string>
    <string name="title2_1">Hummus with Pita Bread</string>
    <string name="title2_2">Greek Salad</string>
    <string name="title2_3">Guacamole with Tortilla Chips</string>
    <string name="title2_4">Mixed Nuts</string>
    <string name="title2_5">Caprese Skewers</string>
    <string name="title3_1">Chicken Alfredo</string>
    <string name="title3_2">Salmon with Lemon Dill Sauce</string>
    <string name="title3_3">Vegetable Stir-Fry</string>
    <string name="title3_4">Spaghetti Bolognese</string>
    <string name="title3_5">Grilled Vegetable Platter</string>
    <string name="title4_1">Chicken Caesar Salad</string>
    <string name="title4_2">Mushroom Risotto</string>
    <string name="title4_3">Greek Salad</string>
    <string name="title4_4">Tuna Wrap</string>
    <string name="title4_5">Caprese Panini</string>
    <string name="title5_1">Berry Blast Smoothie</string>
    <string name="title5_2">Green Power Smoothie</string>
    <string name="title5_3">Tropical Paradise Smoothie</string>
    <string name="title5_4">Peanut Butter Banana Smoothie</string>
    <string name="title5_5">Chocolate Protein Smoothie</string>
    <string name="desc1_1">Satisfying omelette with tomatoes, mushrooms, and spinach. The perfect breakfast for an energetic day.</string>
    <string name="desc1_2">Fragrant granola with creamy yogurt and fresh berries. A healthy breakfast without extra calories.</string>
    <string name="desc1_3">Appetizing toast with creamy avocado and tomatoes. A wonderful choice for a healthy breakfast.</string>
    <string name="desc1_4">Fresh smoothie with raspberries, strawberries, and bananas. Quick to make and very delicious.</string>
    <string name="desc1_5">Healthy oatmeal with honey and nuts. The perfect choice for those watching their figure.</string>
    <string name="desc2_1">Creamy hummus served with warm, toasted pita bread triangles. This classic Middle Eastern dip is made from chickpeas, tahini, lemon juice, olive oil, and garlic, resulting in a rich and savory flavor. Perfect for dipping or spreading.</string>
    <string name="desc2_2">Fresh Greek salad bursting with flavors of ripe tomatoes, crisp cucumbers, briny Kalamata olives, and creamy feta cheese. Drizzled with olive oil and sprinkled with oregano, it\'s a delightful and healthy Mediterranean dish that\'s both satisfying and refreshing.</string>
    <string name="desc2_3">A chunky guacamole dip featuring the natural creaminess of avocados, brightened with lime juice and mixed with diced onions and fresh cilantro. Paired with crispy tortilla chips, it\'s an irresistible snack that offers a balance of textures and zesty flavors.</string>
    <string name="desc2_4">A delightful mix of roasted almonds, cashews, and walnuts, lightly seasoned with sea salt. These crunchy and protein-packed nuts are the perfect on-the-go snack or accompaniment to your favorite beverage. Enjoy the wholesome goodness in every bite.</string>
    <string name="desc2_5">Caprese skewers are an elegant yet easy-to-make appetizer. Cherry tomatoes, fresh mozzarella, and basil leaves are threaded onto skewers and drizzled with balsamic glaze. Each bite is a burst of freshness and a balance of sweet and savory flavors.</string>
    <string name="desc3_1">Indulge in the creamy goodness of chicken Alfredo pasta. Succulent chicken breast is seared to perfection and combined with fettuccine pasta, all coated in a velvety garlic Parmesan cream sauce. It\'s a comforting classic that will leave your taste buds satisfied.</string>
    <string name="desc3_2">Elevate your dinner with pan-seared salmon, delicately seasoned and served with a zesty lemon dill sauce. The crispy skin gives way to tender, flaky salmon, complemented by the freshness of lemon and dill. It\'s a restaurant-quality dish made at home.</string>
    <string name="desc3_3">Savor the flavors of a healthy vegetable stir-fry with tofu, bathed in a savory soy ginger sauce. Colorful bell peppers, crisp broccoli, and carrots join forces to create a satisfying and nutritious dish that\'s ready in a flash.</string>
    <string name="desc3_4">Transport yourself to Italy with this classic spaghetti Bolognese. Seasoned ground beef simmers in a rich tomato sauce, infused with onions and garlic. Tossed with al dente spaghetti, it\'s a hearty and satisfying meal that\'s a family favorite.</string>
    <string name="desc3_5">Enjoy a medley of flavors with this grilled vegetable platter. Zucchini, eggplant, bell peppers, and cherry tomatoes are perfectly grilled and drizzled with balsamic vinegar for a sweet and tangy finish. It\'s a colorful and nutritious addition to your dinner table.</string>
    <string name="desc4_1">A classic chicken Caesar salad with crisp romaine lettuce, grilled chicken breast, croutons, and Caesar dressing.</string>
    <string name="desc4_2">Creamy mushroom risotto cooked with Arborio rice, mushrooms, onions, and white wine. A delightful Italian dish.</string>
    <string name="desc4_3">Fresh Greek salad with crisp cucumbers, juicy tomatoes, black olives, red onions, feta cheese, and Greek dressing.</string>
    <string name="desc4_4">Healthy tuna wrap with flaky tuna, lettuce, tomatoes, and tangy mayo-mustard dressing in a whole wheat tortilla.</string>
    <string name="desc4_5">Caprese panini with fresh mozzarella, basil leaves, ripe tomatoes, and balsamic glaze on ciabatta bread.</string>
    <string name="desc5_1">A refreshing berry blast smoothie packed with antioxidants. Made with mixed berries, yogurt, and honey.</string>
    <string name="desc5_2">Energize your day with a green power smoothie. It contains spinach, banana, almond milk, and chia seeds.</string>
    <string name="desc5_3">Escape to a tropical paradise with this smoothie. It features pineapple, mango, coconut milk, and a hint of lime.</string>
    <string name="desc5_4">Satisfy your cravings with a peanut butter banana smoothie. Creamy and delicious with peanut butter, banana, and oats.</string>
    <string name="desc5_5">Indulge in a chocolate protein smoothie that\'s also good for you. It includes chocolate protein powder, almond milk, and banana.</string>
    <string name="eggs">Eggs</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="pepper">Pepper</string>
    <string name="salt">Salt</string>
    <string name="spinach">Spinach</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="granola">Granola</string>
    <string name="yogurt">Yogurt</string>
    <string name="strawberries">Strawberries</string>
    <string name="raspberries">Raspberries</string>
    <string name="honey">Honey</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="bread">Bread</string>
    <string name="avocado">Avocado</string>
    <string name="olive_oil">Olive oil</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="banana">Banana</string>
    <string name="milk">Milk</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="nuts">Nuts</string>
    <string name="oatmeal">Oatmeal</string>
    <string name="chickpeas">Chickpeas</string>
    <string name="tahini">Tahini</string>
    <string name="lemon_juice">Lemon Juice</string>
    <string name="garlic">Garlic</string>
    <string name="pita_bread">Pita Bread</string>
    <string name="cucumbers">Cucumbers</string>
    <string name="arborio_rice">Arborio rice</string>
    <string name="kalamata_olives">Kalamata Olives</string>
    <string name="feta_cheese">Feta Cheese</string>
    <string name="oregano">Oregano</string>
    <string name="avocados">Avocados</string>
    <string name="lime_juice">Lime Juice</string>
    <string name="onions">Onions</string>
    <string name="cilantro">Cilantro</string>
    <string name="tortilla_chips">Tortilla Chips</string>
    <string name="cherry_tomatoes">Cherry Tomatoes</string>
    <string name="fresh_mozzarella">Fresh Mozzarella</string>
    <string name="basil_leaves">Basil Leaves</string>
    <string name="balsamic_glaze">Balsamic Glaze</string>
    <string name="chicken_breast">Chicken breast</string>
    <string name="fettuccine_pasta">Fettuccine pasta</string>
    <string name="heavy_cream">Heavy cream</string>
    <string name="parmesan_cheese">Parmesan cheese</string>
    <string name="_35_minutes">35 minutes</string>
    <string name="salmon_fillet">Salmon fillet</string>
    <string name="fresh_dill">Fresh dill</string>
    <string name="butter">Butter</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="tofu">Tofu</string>
    <string name="broccoli">Broccoli</string>
    <string name="carrots">Carrots</string>
    <string name="bell_peppers">Bell peppers</string>
    <string name="soy_sauce">Soy sauce</string>
    <string name="_25_minutes">25 minutes</string>
    <string name="ground_beef">Ground beef</string>
    <string name="tomato_sauce">Tomato sauce</string>
    <string name="onion">Onion</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="_40_minutes">40 minutes</string>
    <string name="zucchini">Zucchini</string>
    <string name="eggplant">Eggplant</string>
    <string name="balsamic_vinegar">Balsamic vinegar</string>
    <string name="romaine_lettuce">Romaine lettuce</string>
    <string name="grilled_chicken_breast">Grilled chicken breast</string>
    <string name="croutons">Croutons</string>
    <string name="caesar_dressing">Caesar dressing</string>
    <string name="white_wine">White wine</string>
    <string name="black_olives">Black olives</string>
    <string name="red_onions">Red onions</string>
    <string name="greek_dressing">Greek dressing</string>
    <string name="tuna">Tuna</string>
    <string name="lettuce">Lettuce</string>
    <string name="mayo_mustard_dressing">Mayo-mustard dressing</string>
    <string name="whole_wheat_tortilla">Whole wheat tortilla</string>
    <string name="ripe_tomatoes">Ripe tomatoes</string>
    <string name="ciabatta_bread">Ciabatta bread</string>
    <string name="mixed_berries">Mixed berries</string>
    <string name="almond_milk">Almond milk</string>
    <string name="chia_seeds">Chia seeds</string>
    <string name="_7_minutes">7 minutes</string>
</resources>